[package]
name = "git-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
futures = { version = "0.3" }
reqwest = { version = "0.12", features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0"}
tokio = { version = "1", features = ["full"] }
